fix: update z-index value in header component for improved layering

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -12,7 +12,7 @@ header {
     align-items: center;
     justify-content: space-between;
     position: fixed;
-    z-index: 999;
+    z-index: 99;
     background-color: $background-color;
 
     &.sidebar-open {
